Version 0.1 pointer fixed, responsive collapse button centered vertically

--- a/css/responsive.sass
+++ b/css/responsive.sass
@@ -4,7 +4,9 @@
 			margin: 0px auto
 		.navbar-header
 			button
-				margin-top: 16px !important
+				margin-top: 28px !important
 				margin-bottom: 0px !important
 		.navbar-collapse
 			margin-top: 22px !important
+	.centered
+		text-align: left
